--- a/3rd_week/4_ML_Pipeline/04_Iris_from_scratch.ipynb
+++ b/3rd_week/4_ML_Pipeline/04_Iris_from_scratch.ipynb
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/jan/anaconda3/envs/DeepLearning/bin/python'"
+       "'C:\\\\Users\\\\USER\\\\.conda\\\\envs\\\\AkademyAI\\\\python.exe'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,9 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'seaborn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-ce9cf3fb7c78>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatasets\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mload_iris\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+     ]
+    }
+   ],
    "source": [
     "# Import needed packages\n",
     "# You may add or remove packages should you need them\n",
@@ -109,162 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal length (cm)</th>\n",
-       "      <th>sepal width (cm)</th>\n",
-       "      <th>petal length (cm)</th>\n",
-       "      <th>petal width (cm)</th>\n",
-       "      <th>target</th>\n",
-       "      <th>class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>6.9</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>7.6</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>virginica</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "84                 5.4               3.0                4.5               1.5   \n",
-       "7                  5.0               3.4                1.5               0.2   \n",
-       "123                6.3               2.7                4.9               1.8   \n",
-       "56                 6.3               3.3                4.7               1.6   \n",
-       "45                 4.8               3.0                1.4               0.3   \n",
-       "25                 5.0               3.0                1.6               0.2   \n",
-       "52                 6.9               3.1                4.9               1.5   \n",
-       "65                 6.7               3.1                4.4               1.4   \n",
-       "2                  4.7               3.2                1.3               0.2   \n",
-       "105                7.6               3.0                6.6               2.1   \n",
-       "\n",
-       "     target       class  \n",
-       "84        1  versicolor  \n",
-       "7         0      setosa  \n",
-       "123       2   virginica  \n",
-       "56        1  versicolor  \n",
-       "45        0      setosa  \n",
-       "25        0      setosa  \n",
-       "52        1  versicolor  \n",
-       "65        1  versicolor  \n",
-       "2         0      setosa  \n",
-       "105       2   virginica  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'load_iris' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-07d125208990>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Load the Iris dataset included with scikit-learn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdataset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_iris\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Put data in a pandas DataFrame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mdf_iris\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'load_iris' is not defined"
+     ]
     }
    ],
    "source": [
