--- a/4th_week/backup/Review_if_needed/03_Livecoding_Iris.ipynb
+++ b/4th_week/backup/Review_if_needed/03_Livecoding_Iris.ipynb
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\USER\\\\.conda\\\\envs\\\\AkademyAI\\\\python.exe'"
+       "'/home/jan/anaconda3/envs/DeepLearning/bin/python'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,40 +194,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>84</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>1</td>\n",
        "      <td>versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>7.3</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -239,49 +212,76 @@
        "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
+       "      <th>123</th>\n",
        "      <td>6.3</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.5</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1.8</td>\n",
        "      <td>2</td>\n",
        "      <td>virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.3</td>\n",
+       "      <th>56</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>4.8</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
        "      <td>0.3</td>\n",
        "      <td>0</td>\n",
        "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>6.7</td>\n",
+       "      <th>25</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>6.9</td>\n",
        "      <td>3.1</td>\n",
-       "      <td>4.7</td>\n",
+       "      <td>4.9</td>\n",
        "      <td>1.5</td>\n",
        "      <td>1</td>\n",
        "      <td>versicolor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>6.8</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>4.8</td>\n",
+       "      <th>65</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>4.4</td>\n",
        "      <td>1.4</td>\n",
        "      <td>1</td>\n",
        "      <td>versicolor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>4.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
        "      <td>1.3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>versicolor</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>7.6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>virginica</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -289,31 +289,31 @@
       ],
       "text/plain": [
        "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "114                5.8               2.8                5.1               2.4   \n",
-       "62                 6.0               2.2                4.0               1.0   \n",
-       "33                 5.5               4.2                1.4               0.2   \n",
-       "107                7.3               2.9                6.3               1.8   \n",
+       "84                 5.4               3.0                4.5               1.5   \n",
        "7                  5.0               3.4                1.5               0.2   \n",
-       "100                6.3               3.3                6.0               2.5   \n",
-       "40                 5.0               3.5                1.3               0.3   \n",
-       "86                 6.7               3.1                4.7               1.5   \n",
-       "76                 6.8               2.8                4.8               1.4   \n",
-       "71                 6.1               2.8                4.0               1.3   \n",
+       "123                6.3               2.7                4.9               1.8   \n",
+       "56                 6.3               3.3                4.7               1.6   \n",
+       "45                 4.8               3.0                1.4               0.3   \n",
+       "25                 5.0               3.0                1.6               0.2   \n",
+       "52                 6.9               3.1                4.9               1.5   \n",
+       "65                 6.7               3.1                4.4               1.4   \n",
+       "2                  4.7               3.2                1.3               0.2   \n",
+       "105                7.6               3.0                6.6               2.1   \n",
        "\n",
        "     target       class  \n",
-       "114       2   virginica  \n",
-       "62        1  versicolor  \n",
-       "33        0      setosa  \n",
-       "107       2   virginica  \n",
+       "84        1  versicolor  \n",
        "7         0      setosa  \n",
-       "100       2   virginica  \n",
-       "40        0      setosa  \n",
-       "86        1  versicolor  \n",
-       "76        1  versicolor  \n",
-       "71        1  versicolor  "
+       "123       2   virginica  \n",
+       "56        1  versicolor  \n",
+       "45        0      setosa  \n",
+       "25        0      setosa  \n",
+       "52        1  versicolor  \n",
+       "65        1  versicolor  \n",
+       "2         0      setosa  \n",
+       "105       2   virginica  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -352,10 +352,10 @@
        "2    0\n",
        "3    0\n",
        "4    0\n",
-       "Name: target, dtype: int32"
+       "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
