--- a/4th_week/1_Clustering/exercises/exercise_05_evaluating_the_grain_clustering.ipynb
+++ b/4th_week/1_Clustering/exercises/exercise_05_evaluating_the_grain_clustering.ipynb
@@ -116,79 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>varieties</th>\n",
-       "      <th>Canadian wheat</th>\n",
-       "      <th>Kama wheat</th>\n",
-       "      <th>Rosa wheat</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>labels</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>68</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>60</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "varieties  Canadian wheat  Kama wheat  Rosa wheat\n",
-       "labels                                           \n",
-       "0                       0           1          60\n",
-       "1                      68           9           0\n",
-       "2                       2          60          10"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd.crosstab(df['labels'] , df['varieties'])"
+    "ct =pd.crosstab(df['labels'] , df['varieties'])"
    ]
   },
   {
@@ -200,9 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "varieties  Canadian wheat  Kama wheat  Rosa wheat\n",
+      "labels                                           \n",
+      "0                       0           1          60\n",
+      "1                      68           9           0\n",
+      "2                       2          60          10\n"
+     ]
+    }
+   ],
    "source": [
     "print(ct)"
    ]
