--- a/4th_week/1_Clustering/exercises/exercise_06_scaling_the_fish_data.ipynb
+++ b/4th_week/1_Clustering/exercises/exercise_06_scaling_the_fish_data.ipynb
@@ -20,9 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "exercise": false
    },
    "outputs": [],
@@ -44,10 +43,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>weight</th>\n",
+       "      <th>length1</th>\n",
+       "      <th>length2</th>\n",
+       "      <th>length3</th>\n",
+       "      <th>height</th>\n",
+       "      <th>width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>242.0</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>25.4</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>38.4</td>\n",
+       "      <td>13.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>290.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>26.3</td>\n",
+       "      <td>31.2</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>13.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>340.0</td>\n",
+       "      <td>23.9</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>31.1</td>\n",
+       "      <td>39.8</td>\n",
+       "      <td>15.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>363.0</td>\n",
+       "      <td>26.3</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>33.5</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>13.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>430.0</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>15.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   weight  length1  length2  length3  height  width\n",
+       "0   242.0     23.2     25.4     30.0    38.4   13.4\n",
+       "1   290.0     24.0     26.3     31.2    40.0   13.8\n",
+       "2   340.0     23.9     26.5     31.1    39.8   15.1\n",
+       "3   363.0     26.3     29.0     33.5    38.0   13.3\n",
+       "4   430.0     26.5     29.0     34.0    36.6   15.1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "samples = df.values"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,12 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.cluster import KMeans"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,12 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scaler = StandardScaler()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,12 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "kmeans = KMeans(n_clusters = 4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,12 +222,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('standardscaler',\n",
+       "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
+       "                ('kmeans',\n",
+       "                 KMeans(algorithm='auto', copy_x=True, init='k-means++',\n",
+       "                        max_iter=300, n_clusters=4, n_init=10, n_jobs=None,\n",
+       "                        precompute_distances='auto', random_state=None,\n",
+       "                        tol=0.0001, verbose=0))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_pipeline(scaler, kmeans)"
+   ]
   },
   {
    "cell_type": "markdown",
