--- a/4th_week/1_Clustering/exercises/exercise_07_clustering_the_fish.ipynb
+++ b/4th_week/1_Clustering/exercises/exercise_07_clustering_the_fish.ipynb
@@ -18,12 +18,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": true,
     "exercise": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>weight</th>\n",
+       "      <th>length1</th>\n",
+       "      <th>length2</th>\n",
+       "      <th>length3</th>\n",
+       "      <th>height</th>\n",
+       "      <th>width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>242.0</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>25.4</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>38.4</td>\n",
+       "      <td>13.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>290.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>26.3</td>\n",
+       "      <td>31.2</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>13.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>340.0</td>\n",
+       "      <td>23.9</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>31.1</td>\n",
+       "      <td>39.8</td>\n",
+       "      <td>15.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>363.0</td>\n",
+       "      <td>26.3</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>33.5</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>13.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>430.0</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>15.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   weight  length1  length2  length3  height  width\n",
+       "0   242.0     23.2     25.4     30.0    38.4   13.4\n",
+       "1   290.0     24.0     26.3     31.2    40.0   13.8\n",
+       "2   340.0     23.9     26.5     31.1    39.8   15.1\n",
+       "3   363.0     26.3     29.0     33.5    38.0   13.3\n",
+       "4   430.0     26.5     29.0     34.0    36.6   15.1"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -31,7 +123,8 @@
     "\n",
     "# remove the species from the DataFrame so only the measurements are left\n",
     "species = list(df['species'])\n",
-    "del df['species']"
+    "del df['species']\n",
+    "df.head()"
    ]
   },
   {
@@ -43,12 +136,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('standardscaler',\n",
+       "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
+       "                ('kmeans',\n",
+       "                 KMeans(algorithm='auto', copy_x=True, init='k-means++',\n",
+       "                        max_iter=300, n_clusters=4, n_init=10, n_jobs=None,\n",
+       "                        precompute_distances='auto', random_state=None,\n",
+       "                        tol=0.0001, verbose=0))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "kmeans = KMeans(n_clusters = 4)\n",
+    "\n",
+    "make_pipeline(scaler, kmeans)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +178,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "samples = kmeans.fit(df.values)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,12 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "labels = kmeans.predict(df.values)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,12 +210,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame({'labels' : labels , 'species': species})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,12 +226,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ct = pd.crosstab(df['labels'] , df['species'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,10 +242,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "species  Bream  Pike  Roach  Smelt\n",
+      "labels                            \n",
+      "0           17    10      3      0\n",
+      "1           16     2      0      0\n",
+      "2            1     1     17     14\n",
+      "3            0     4      0      0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ct)"
+   ]
   }
  ],
  "metadata": {
