--- a/4th_week/1_Clustering/exercises/exercise_09_which_stocks_move_together.ipynb
+++ b/4th_week/1_Clustering/exercises/exercise_09_which_stocks_move_together.ipynb
@@ -18,9 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true,
     "exercise": false
    },
    "outputs": [],
@@ -40,11 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "exercise": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('normalizer', Normalizer(copy=True, norm='l2')),\n",
+       "                ('kmeans',\n",
+       "                 KMeans(algorithm='auto', copy_x=True, init='k-means++',\n",
+       "                        max_iter=300, n_clusters=14, n_init=10, n_jobs=None,\n",
+       "                        precompute_distances='auto', random_state=None,\n",
+       "                        tol=0.0001, verbose=0))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "companies = list(stocks_df.index)\n",
     "movements = stocks_df.values\n",
@@ -68,12 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "labels = pipeline.predict(movements)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,12 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame({'labels' : labels , 'companies' :companies} )\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,10 +117,411 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>labels</th>\n",
+       "      <th>companies</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Goldman Sachs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Royal Dutch Shell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>1</td>\n",
+       "      <td>SAP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1</td>\n",
+       "      <td>GlaxoSmithKline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Sanofi-Aventis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Total</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Novartis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>British American Tobacco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Unilever</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Navistar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ford</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Lookheed Martin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Northrop Grumman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Boeing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Mitsubishi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Xerox</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Sony</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Honda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Canon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>4</td>\n",
+       "      <td>HP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Toyota</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Taiwan Semiconductor Manufacturing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Intel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Texas instruments</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Kimberly-Clark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Procter Gamble</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Colgate-Palmolive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Chevron</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>7</td>\n",
+       "      <td>DuPont de Nemours</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Schlumberger</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Home Depot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>7</td>\n",
+       "      <td>ConocoPhillips</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>7</td>\n",
+       "      <td>MasterCard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Exxon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>7</td>\n",
+       "      <td>3M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Caterpillar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>7</td>\n",
+       "      <td>IBM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Valero Energy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Apple</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Google/Alphabet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Yahoo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Amazon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Wal-Mart</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Walgreen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Johnson &amp; Johnson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Pfizer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Symantec</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Cisco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Microsoft</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Dell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Coca Cola</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Pepsi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>12</td>\n",
+       "      <td>McDonalds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Philip Morris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>13</td>\n",
+       "      <td>General Electrics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Bank of America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "      <td>American express</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Wells Fargo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13</td>\n",
+       "      <td>AIG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>13</td>\n",
+       "      <td>JPMorgan Chase</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    labels                           companies\n",
+       "18       0                       Goldman Sachs\n",
+       "42       1                   Royal Dutch Shell\n",
+       "43       1                                 SAP\n",
+       "19       1                     GlaxoSmithKline\n",
+       "46       1                      Sanofi-Aventis\n",
+       "49       1                               Total\n",
+       "37       1                            Novartis\n",
+       "6        1            British American Tobacco\n",
+       "52       1                            Unilever\n",
+       "35       2                            Navistar\n",
+       "15       2                                Ford\n",
+       "29       3                     Lookheed Martin\n",
+       "36       3                    Northrop Grumman\n",
+       "4        3                              Boeing\n",
+       "34       4                          Mitsubishi\n",
+       "58       4                               Xerox\n",
+       "45       4                                Sony\n",
+       "21       4                               Honda\n",
+       "7        4                               Canon\n",
+       "22       4                                  HP\n",
+       "48       4                              Toyota\n",
+       "50       5  Taiwan Semiconductor Manufacturing\n",
+       "24       5                               Intel\n",
+       "51       5                   Texas instruments\n",
+       "27       6                      Kimberly-Clark\n",
+       "40       6                      Procter Gamble\n",
+       "9        6                   Colgate-Palmolive\n",
+       "12       7                             Chevron\n",
+       "13       7                   DuPont de Nemours\n",
+       "44       7                        Schlumberger\n",
+       "20       7                          Home Depot\n",
+       "10       7                      ConocoPhillips\n",
+       "30       7                          MasterCard\n",
+       "57       7                               Exxon\n",
+       "32       7                                  3M\n",
+       "8        7                         Caterpillar\n",
+       "23       7                                 IBM\n",
+       "53       7                       Valero Energy\n",
+       "0        8                               Apple\n",
+       "17       8                     Google/Alphabet\n",
+       "59       9                               Yahoo\n",
+       "2        9                              Amazon\n",
+       "56      10                            Wal-Mart\n",
+       "54      10                            Walgreen\n",
+       "25      10                   Johnson & Johnson\n",
+       "39      10                              Pfizer\n",
+       "47      11                            Symantec\n",
+       "11      11                               Cisco\n",
+       "33      11                           Microsoft\n",
+       "14      11                                Dell\n",
+       "28      12                           Coca Cola\n",
+       "38      12                               Pepsi\n",
+       "31      12                           McDonalds\n",
+       "41      12                       Philip Morris\n",
+       "16      13                   General Electrics\n",
+       "5       13                     Bank of America\n",
+       "3       13                    American express\n",
+       "55      13                         Wells Fargo\n",
+       "1       13                                 AIG\n",
+       "26      13                      JPMorgan Chase"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values( by = ['labels'])"
+   ]
   },
   {
    "cell_type": "markdown",
